[package]
name = "hello-world-yew"
version = "0.1.0"
authors = ["Artus Rocha <artusrocha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.14.3", features = ["std_web"] }
is-even = "~1.0.0"