[package]
name = "simple-todo-form-list-yew"
version = "0.1.0"
authors = ["Artus Rocha <artusrocha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.16.2", features = ["std_web"] }
is-even = "~1.0.0"