[package]
name = "simple-todo-form-list-yew"
version = "0.1.0"
authors = ["Artus Rocha <artusrocha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.16.2" }
# yew = { version = "0.14.3", features = ["std_web"] }
serde = "1"
serde_derive = "1"
wasm-bindgen = "^0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.7"
web-sys = { version = "^0.3.40", features = [ 'Document', 'Element', 'Window', 'HtmlCollection' ] }